src/test/ui/never_type/never-value-fallback-issue-66757.nofallback.stderr
error[E0277]: the trait bound `E: From<()>` is not satisfied
  --> $DIR/never-value-fallback-issue-66757.rs:28:5
   |
LL |     <E as From<_>>::from(never);
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `From<()>` is not implemented for `E`
   |
   = help: the following implementations were found:
             <E as From<!>>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
